--- a/index.html
+++ b/index.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<!-- ICS2O-Assignment-2-JS -->
+<html lang="en-ca">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Volume of a Pyramid" />
+  <meta name="keywords" content="mths, icd2o" />
+  <meta name="author" content="Peter Zerbinos" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-amber.min.css"/>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+  <link rel="manifest" href="./site.webmanifest" />
+  <title>Volume of a Pyramid</title>
+</head>
+
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Volume of a Pyramid</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <div class="right-image">
+        <img src="./images/pyramid.png" alt="pyramid" />
+      </div>
+      <div class="page-content">Enter the base length, width, and height in cm.</div>
+      <br />
+      <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base-length" />
+          <label class="mdl-textfield__label" for="base-length">Base Length (cm)</label>
+          <span class="mdl-textfield__error">Input is not a number</span>
+        </div>
+        <br />
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="base-width" />
+          <label class="mdl-textfield__label" for="base-width">Base Width (cm)</label>
+          <span class="mdl-textfield__error">Input is not a number</span>
+        </div>
+        <br />
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="pyramid-height" />
+          <label class="mdl-textfield__label" for="pyramid-height">Height (cm)</label>
+          <span class="mdl-textfield__error">Input is not a number</span>
+        </div>
+        <br />
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="calculateVolumeOfPyramid()" type="button">
+          Calculate
+        </button>
+      </form>
+      <br />
+      <div class="page-content">
+        <div id="volume"></div>
+      </div>
+    </main>
+  </div>
+</body>
+
 </html>
